--- a/main.css
+++ b/main.css
@@ -4,7 +4,11 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    color: azure;
+    color: var(--cor3);
+    font-family: "Raleway", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
 }
 
 :root{
@@ -41,9 +45,6 @@ body > header{
     background: var(--cor5);
     color: var(--cor3);
 }
-body > header h1{
-    color: var(--cor3);
-}
 body > header li{
     display: inline;
 }
@@ -56,13 +57,17 @@ body > header a{
     border-radius: 10px;
 }
 body > header a:hover{
-    background-color: var(--cor2);
+    background: var(--cor6);
 }
 
 body > header h1{
+    color: var(--cor3);
+    font-family: "Lilita One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     padding: 24px 0;
     margin-left: 16px;
-    font-size: 38px;
+    font-size: 60px;
 }
 
 /*Produtos*/
@@ -70,6 +75,13 @@ body > header h1{
     margin-top: 48px;
     margin-bottom: 32px;
     text-align: center;
+}
+
+#Produtos header h2{
+    color: #a3c1e3;
+    font-family: "Lilita One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 #produtos{
@@ -174,6 +186,9 @@ body > header h1{
 }
 #about h2{
     text-align: center;
+    font-family: "Lilita One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 /*  RODAPÉ  */
@@ -188,6 +203,9 @@ body > header h1{
 #Contact h2{
     padding: 25px 25px;
     font-size: 50px;
+    font-family: "Lilita One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 .conteudo{
     justify-content: space-between;
@@ -212,7 +230,24 @@ textarea{
 }
 .box-contato h3{
     font-size: 30px;
+    color: var(--cor3);
 }
 .form{
     display: flex;
+}
+.social-media a img{
+    max-width: 32px;
+    width: 100%;
+    margin-right: 20px;
+    margin-top: 32px;
+}
+.social-media h3{
+    color: #161629;
+    font-size: 30px;
+}
+
+.social-media{
+    background: var(--cor6);
+    border-radius: 10px;
+    padding: 10px 10px;
 }
